--- a/1.html
+++ b/1.html
@@ -9,6 +9,7 @@
     <h1>khoa test</h1>
     <h2> khoa</h2>
     <h2> khoa</h2>
+    <h2>khao</h2>
     <h2> khoa</h2>
     <h3>Khoa teww</h3>
     <h4>Nguyen VU</h4>
